--- a/style.css
+++ b/style.css
@@ -10,33 +10,22 @@
 
 .link-list {
 	display: flex;
+	flex-direction: column;
+	align-items: center;
 	justify-content: center;
 }
 
 .link-button {
-	display: flex;
+	display: block;
 	border: 4px solid aqua;
 	border-radius: 10px;
 	background-color: black;
-	justify-content: center;
-	width: 15%;
+	text-align: center;
+	width: 75%;
 	padding: 10px 20px;
 	font-size: 16px;
-	margin: 5px;
+	margin-top: 10px;
 	text-decoration: none;
 	color: aqua;
 	font-weight: bold;
-}
-
-.generic-list {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-}
-
-.generic-list-item {
-	display: flex;
-	width: 50%;
-	justify-content: center;
-	margin-top: 4px;
 }
